<resources>
    <string name="app_name">Secure Performance Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="action_maps">Maps</string>
    <string name="action_scan">Scan</string>
    <string name="action_stop_scan">Stop</string>

    <string name="heart_rate">Heart Rate:</string>
    <string name="environment">Environment</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="gps">GPS</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="map">open map</string>
    <string name="movement">Movement</string>
    <string name="steps">steps</string>
    <string name="x_force">X Force:</string>
    <string name="y_force">Y Force:</string>
    <string name="z_force">Z Force:</string>
    <string name="data_unavailable">0</string>
    <string name="data_unavailable_decimal">0.0</string>
    <string name="ble_data">Raw BLE Data:</string>

    <string name="heart_rate_unit">bpm</string>
    <string name="speed_unit">mph</string>
    <string name="temperature_unit">°F</string>
    <string name="pressure_unit">hPa</string>
    <string name="humidity_unit">%</string>

    <string name="password_entry">Password</string>
    <string name="submit">Submit</string>
    <string name="incorrect_password">Incorrect Password!</string>
    <string name="correct_password">Correct Password!</string>

    <string name="device_name">Device Name:</string>
    <string name="device_address">Device Address:</string>
    <string name="device_state">State:</string>
    <string name="device_rssi">RSSI:</string>
    <string name="device_state_disconnected">Disconnected</string>
    <string name="device_state_connected">Connected</string>
    <string name="device_state_connecting">Connecting...</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this device!</string>
    <string name="ble_not_supported">BLE is not supported on this device!</string>
    <string name="bluetooth_scanner_not_found">Bluetooth Scanner Not Found!</string>
    <string name="scanning">Scanning!</string>
    <string name="scanning_finished">Scanning Finished!</string>
    <string name="bluetooth_le_activity_title">Setup BluetoothLE</string>
    <string name="device_popup_title">BluetoothLE Device</string>
    <string name="main_activity_title">Performance Metrics</string>
    <string name="raw_data_popup_title">Raw BLE Data</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>